--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
 }
 
+* { 
+  cursor: url(http://www.rw-designer.com/cursor-downloadset.php?id=son-goku-1)
+}
+
 .btn:hover {
   transform: scale(1.1, 1.1);
   transition: all 0.5s;
@@ -65,6 +69,6 @@
   }
 
   .section {
-    @apply py-9 flex items-center;
+    @apply flex items-center;
   }
 }
